\name{NEWS}
\title{News for Package 'oligo'}

\section{Changes in version 1.18}{
  \subsection{BUG FIXES}{
    \item Fixed message method when normalizing with large dataset
    support;
  }
}

\section{Changes in version 1.16}{
  \subsection{USER VISIBLE CHANGES}{
    \itemize{
      \item Using NEWS.Rd;
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item New summarization methods are available: PLM, PLMr, PLMrr
      and PLMrc. These are implemented in the basicPLM function and also
      available through the summarize() interface (method=c('plm', 'plmr',
      'plmrr', 'plmrc'));
      \item fitPLM(), NUSE() and RLE() are now available;
      \item Presence/Absence calls are available through paCalls();
      \item MAplot method with advanced options;
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item 'pm<-', 'mm<-', 'bg<-' now work with ff_matrix replacements;
      \item boxplot() now uses the correct (default) ylim if transfo !=
      log2;
      \item Fixed documentation for hist(), boxplot(), fitPLM();
      \item Fixed image for PLMset on NimbleGen arrays;
    }
  }
}

\section{Changes in version 1.14}{
  \subsection{USER VISIBLE CHANGES}{
    \itemize{
      \item Added support to read gzipped XYS files directly.
      \item Added information for citation.
      \item Added getNetAffx method to retrieve NetAffx annotation for
        Exon ST and Gene ST arrays.
      \item Reading in uncompressed XYS files is much faster than in 1.12.2.
      \item Added vignette for Exon/Gene ST arrays (rma and NetAffx annot)
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed bug in boxplot / hist / MAplot
      \item Fixed issue that would appear with GeneFeatureSet objects,
        in which it selections like obj[c(2, 2, 1),] would generate
        invalid GeneFeatureSet objects
      \item Fixed bugs in image / bg / bgindex / bgSequence
        for Exon and Gene arrays (due to changes in annotation)